--- a/vuejs-module/package.json
+++ b/vuejs-module/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "5.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "mathjs": "^11.7.0",
+    "vue": "^3.2.13",
+    "vue-router": "^4.1.6",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
